[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edit-pdf"
version = "0.1.0"
description = "A PDF text replacement tool with redaction support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yudai"}
]

dependencies = [
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
tox = [
    "tox==4.23.2",
    "tox-uv==1.16.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W"]

[tool.setuptools]
packages = []
